Variable and type retrieval in expressions implemented